syntax = "proto3";

package rspace_plus_plus_types;

import "protobuf/RhoTypes.proto";

/**
 * This is the first value of the tuple for the return type of the
 * Consume/Produce functions
 *
 * See rspace/src/main/scala/coop/rchain/rspace/ISpace.scala
 */
message ContResultProto {
  rhotypes.TaggedContinuation continuation = 1;
  bool persistent = 2;
  repeated rhotypes.Par channels = 3;
  repeated rhotypes.BindPattern patterns = 4;
  bool peek = 5;
}

/**
 * This is the second value of the tuple for the return type of the
 * Consume/Produce functions
 *
 * 'RSpaceResult' because Rust has a standard name type 'Result'
 *
 * See rspace/src/main/scala/coop/rchain/rspace/ISpace.scala
 */
message RSpaceResultProto {
  rhotypes.Par channel = 1;
  rhotypes.ListParWithRandom matchedDatum = 2;
  rhotypes.ListParWithRandom removedDatum = 3;
  bool persistent = 4;
}

/**
 * This is the tuple that is returned from the Consume/Produce functions
 */
message ActionResult {
  ContResultProto contResult = 1;
  repeated RSpaceResultProto results = 2;
}

/**
 * Protobuf message representation of 'Datum'
 * One of the data structures returned in 'to_map' / 'toMap'
 *
 * See rspace/src/main/scala/coop/rchain/rspace/internal.scala
 */
message DatumProto {
  rhotypes.ListParWithRandom a = 1;
  bool persist = 2;
  ProduceProto source = 3;
}

/**
 * Protobuf message representation of 'WaitingContinuation'
 * This one of the data structures returned in 'to_map' / 'toMap'
 *
 * See rspace/src/main/scala/coop/rchain/rspace/internal.scala
 */
message WaitingContinuationProto {
  repeated rhotypes.BindPattern patterns = 1;
  rhotypes.TaggedContinuation continuation = 2;
  bool persist = 3;
  repeated SortedSetElement peeks = 4;
  ConsumeProto source = 5;
}

/**
 * This message is needed on the Scala side because the
 * 'project/StacksafeScalapbGenerator.scala' file prohibits packable fields
 */
message SortedSetElement {
  int32 value = 1;
}

/**
 * Protobuf message representation of 'Produce'
 *
 * See rspace/src/main/scala/coop/rchain/rspace/trace/Event.scala
 */
message ProduceProto {
  bytes channelHash = 1;
  bytes hash = 2;
  bool persistent = 3;
}

/**
 * Protobuf message representation of 'Consume'
 *
 * See rspace/src/main/scala/coop/rchain/rspace/trace/Event.scala
 */
message ConsumeProto {
  repeated bytes channelHashes = 1;
  bytes hash = 2;
  bool persistent = 3;
}

message ProtobufRow {
  repeated DatumProto data = 1;
  repeated WaitingContinuationProto wks = 2;
}

message MapEntry {
  repeated rhotypes.Par key = 1;
  ProtobufRow value = 2;
}

/**
 * Return type for 'to_map' / 'toMap'
 */
message ToMapResult {
  repeated MapEntry mapEntries = 1;
}

/**
 * Data structure for 'consume' function parameters
 */
message ConsumeParams {
  repeated rhotypes.Par channels = 1;
  repeated rhotypes.BindPattern patterns = 2;
  rhotypes.TaggedContinuation continuation = 3;
  bool persist = 4;
  repeated SortedSetElement peeks = 5;
}

/**
 * Data structure for 'install' function parameters
 */
message InstallParams {
  repeated rhotypes.Par channels = 1;
  repeated rhotypes.BindPattern patterns = 2;
  rhotypes.TaggedContinuation continuation = 3;
}

/**
 * Data structure for 'spatial_match_result' function return type
 */
message FreeMapProto {
  map<int32, rhotypes.Par> entries = 1;
}

/**
 * Protobuf message representation of 'Checkpoint'
 *
 * See rspace/src/main/scala/coop/rchain/rspace/Checkpoint.scala
 */
message CheckpointProto {
  bytes root = 1;
}

message Datums {
  repeated DatumProto datums = 1;
}

message WaitingContinuations {
  repeated WaitingContinuationProto wks = 1;
}

message Join {
  repeated rhotypes.Par join = 1;
}

message Joins {
  repeated Join joins = 1;
}

message Channels {
  repeated rhotypes.Par channels = 1;
}

message RepeatedChannels {
  repeated Channels channels = 1;
}

/**
 * Protobuf message representation of 'HotStoreState'
 */
// message HotStoreState {
//   map<Channels, rhotypes.Par> continuations = 1;
//   map<Channels, WaitingContinuationProto> installed_continuations = 2;
//   map<rhotypes.Par, Datums> data = 3;
//   map<rhotypes.Par, RepeatedChannels> joins = 4;
//   map<rhotypes.Par, RepeatedChannels> installed_joins = 5;
// }

/**
 * Protobuf message representation of 'SoftCheckpoint'
 *
 * See rspace/src/main/scala/coop/rchain/rspace/Checkpoint.scala
 */
// message SoftCheckpoint {
//   HotStoreState cache_snapshot = 1;
//   map<ProduceProto, int32> produce_counter = 2;
// }
